# giftfactory

./: pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: products.py
backend/app/core/: config.py
